# issue-backend

./: .gitignore  BACKEND_SETUP.md  INSTALL_NOW.md  README.md  create_db.sql  env.template  install_with_pip.bat  manage.py  pyproject.toml  requirements.txt  setup.ps1  一鍵啟動.bat  下一步操作.md  不使用Poetry的設置.md  使用PyMySQL.md  修復cryptography錯誤.md  修復資料庫連線.md  修復遷移問題.bat  修改執行政策.bat  創建超級用戶.bat  啟動伺服器.bat  啟動伺服器_CMD.bat  啟動虛擬環境.bat  執行遷移.bat  執行遷移_CMD.bat  執行遷移_完整版.bat  安裝cryptography.bat  完整啟動流程.md  完整測試連線.bat  完整診斷.bat  完整遷移檢查.bat  建立Issue遷移.bat  建立客戶遷移.bat  建立所有遷移.bat  強制重建遷移.bat  快速安裝.bat  快速設置.txt  快速驗證.bat  更新密碼.bat  最終驗證.bat  (+12 more)
src/common/: models.py  urls.py  utils.py  views.py
src/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py  test.py
src/issues/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/issues/migrations/: 0001_initial.py  0002_customerwarranty.py  0003_simplify_customerwarranty.py  0004_alter_issuecomment_options_and_more.py  0005_issuecommentattachment.py
src/issues/services/: export.py  import_service.py
src/reports/: urls.py  views.py
src/reports/services/: metrics.py
src/settings/: urls.py  views.py
